# ODTemplater

./: .gitignore  LICENSE  README.md
doc/: Example_template.odt  README.md  UML_DIAGRAMM.md
odtemplater/: README.md  pyproject.toml  setup.py
odtemplater/odtemplater/: __init__.py  app.py
odtemplater/odtemplater.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
odtemplater/odtemplater/config/: __init__.py  config.py
odtemplater/odtemplater/lib/: __init__.py  lib.py
odtemplater/odtemplater/odtapplysettings/: __init__.py  setting_add_images.py  setting_extend_set.py  setting_if_block.py
